Fix incorrect ACL update handling, treat empty collection as equal to null in change calculator.